# Accelerated-Multi-Parameter-Performance-Modelling

./: CMakeLists.txt  LICENSE  LeastSquaresGPU.cc  LeastSquaresGPU.h  PARAMETERS.cc  PARAMETERS.h  common.h  gpuKernels.cu  gpuKernels.h  lsMatricesKernelsColumnMajor  main.cc  main.h  matrix.cc  matrix.h  rss_smape_kernels
UNUSED_CODE/: LeastSquaresCPU.cc  LeastSquaresCPU.h  SOME_TESTS  lsMatricesKernelsRowMajor  timer.h
